The guards movement logic completed.  As well as detection

--- a/Capstone/Assembly-CSharp.csproj
+++ b/Capstone/Assembly-CSharp.csproj
@@ -47,8 +47,13 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\CameraControl.cs" />
      <Compile Include="Assets\Scripts\FirstPersonController.cs" />
+     <Compile Include="Assets\Scripts\Goal.cs" />
+     <Compile Include="Assets\Scripts\GuardDetection.cs" />
+     <Compile Include="Assets\Scripts\LightPlayer.cs" />
+     <Compile Include="Assets\Scripts\MinimapManager.cs" />
      <Compile Include="Assets\Scripts\Node.cs" />
      <Compile Include="Assets\Scripts\RandomMovement.cs" />
+     <Compile Include="Assets\Scripts\SceneManager.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
