--- a/Capstone/Assembly-CSharp.csproj
+++ b/Capstone/Assembly-CSharp.csproj
@@ -73,17 +73,18 @@
      <Compile Include="Assets\OVR\Scripts\Util\OVRSceneSampleController.cs" />
      <Compile Include="Assets\OVR\Scripts\Util\OVRScreenFade.cs" />
      <Compile Include="Assets\OVR\Scripts\Util\OVRTrackerBounds.cs" />
-     <Compile Include="Assets\Scripts\CameraControl.cs" />
-     <Compile Include="Assets\Scripts\FirstPersonController.cs" />
      <Compile Include="Assets\Scripts\Goal.cs" />
-     <Compile Include="Assets\Scripts\GuardDetection.cs" />
-     <Compile Include="Assets\Scripts\InfoManager.cs" />
+     <Compile Include="Assets\Scripts\Guard\GuardDetection.cs" />
+     <Compile Include="Assets\Scripts\Guard\OptimalTraversal.cs" />
+     <Compile Include="Assets\Scripts\Guard\RandomMovement.cs" />
      <Compile Include="Assets\Scripts\LightPlayer.cs" />
-     <Compile Include="Assets\Scripts\MinimapManager.cs" />
+     <Compile Include="Assets\Scripts\Managers\GuardManager.cs" />
+     <Compile Include="Assets\Scripts\Managers\InfoManager.cs" />
+     <Compile Include="Assets\Scripts\Managers\MinimapManager.cs" />
+     <Compile Include="Assets\Scripts\Managers\SceneManager.cs" />
      <Compile Include="Assets\Scripts\Node.cs" />
-     <Compile Include="Assets\Scripts\OptimalTraveral.cs" />
-     <Compile Include="Assets\Scripts\RandomMovement.cs" />
-     <Compile Include="Assets\Scripts\SceneManager.cs" />
+     <Compile Include="Assets\Scripts\Player\CameraControl.cs" />
+     <Compile Include="Assets\Scripts\Player\FirstPersonController.cs" />
      <None Include="Assets\Plugins\Android\assets\placeholder.txt" />
      <None Include="Assets\OVR\Moonlight\Shaders\OVRColorRampAlpha.shader" />
      <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
